# JEMARO_S7_ARPRO_Open_projects

./: .gitignore  CMakeLists.txt  README.md  ex2_1_find_number.cpp  ex2_1_find_number_reverse.cpp  ex2_1_find_number_reverse.h  ex2_2_rock_paper_scissors.cpp  ex3_1_21_sticks_game.cpp
Algorithm 1D function minimization/: Alg1Dfuncmin.cpp  CMakeLists.txt
Battleship/: CMakeLists.txt  main.cpp
Battleship/include/: boat.h  cell.h  player.h  utils.h
Battleship/src/: player.cpp  utils.cpp
Genetic algorithm/: CMakeLists.txt  ga.h  main.cpp  xy.cpp  xy.h
Simple player games/: CMakeLists.txt  ex2_1_find_number.h  ex2_2_rock_paper_scissors.h
Sticks game/: CMakeLists.txt  ex3_1_21_sticks_game.h
debug/: CMakeCache.txt  Open_projects  Open_projects.cbp  cmake_install.cmake  ex2_1_find_number
debug/.cmake/api/v1/reply/: cache-v2-0813d26c1272ebb1c9a3.json  cmakeFiles-v1-6f2f0e35b2bdcec4a600.json  codemodel-v2-a4241e641e99e7c5cda0.json  index-2020-09-15T08-40-06-0066.json  target-Open_projects-Debug-5b9435567033c258e0a7.json  target-ex2_1_find_number-Debug-e7dcefdf967de03b84e4.json
release/: CMakeCache.txt  Open_projects  Open_projects.cbp  cmake_install.cmake  ex2_1_find_number  ex2_1_find_number_reverse
release/.cmake/api/v1/reply/: cache-v2-54785ec6556ba520be02.json  cmakeFiles-v1-d77fba3f9a729a8e980c.json  codemodel-v2-60c18857c8cb6b46982e.json  index-2020-09-15T10-12-23-0303.json  target-Open_projects-Release-1fd9e8bbef34ece876bc.json  target-ex2_1_find_number-Release-5e015cd4de5382e6ec16.json  target-ex2_1_find_number_reverse-Release-351e969cd7df5253207e.json  (+1 more)
