cmake_minimum_required(VERSION 3.5)

project(Simple_player_games LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(ex2_1_find_number ex2_1_find_number.cpp)
add_executable(ex2_1_find_number_reverse ex2_1_find_number_reverse.cpp)
add_executable(ex2_2_rock_paper_scissors ex2_2_rock_paper_scissors.cpp)
